--- a/src/components/layouts/home.css
+++ b/src/components/layouts/home.css
@@ -1,7 +1,7 @@
 .container {
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url(./img/cover1.jpg);
+    background-image: linear-gradient(rgba(61, 43, 5, 0.6), rgba(0, 0, 0, 0.6)),url(./img/cover1.jpg);
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
@@ -65,7 +65,7 @@
     border-radius: 15px;
     cursor: pointer;
     font-weight: 550;
-    
+    color: white;
 }
 
 .btn-emails{
@@ -109,4 +109,91 @@
     to{
         display: inline-block
     }
+}
+
+/* Modal */
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1; 
+    padding-top: 150px;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content{
+    top: 50%;
+    left: 50%;
+    margin: auto;
+    width: 500px;
+    height: 250px;
+    color: white;
+    background-color:  #1595CA;
+    border: 1px solid white;
+    /* opacity: 0.9; */
+    border-radius: 15px;
+}
+
+.modal-title{
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-size: 28px;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed white
+}
+
+.close {
+  color: white;
+  float: right;
+  font-size: 32px;
+  font-weight: bold;
+  float: right;
+  margin-right: 10px
+}
+
+.close:hover{
+    color: #F49E4C;
+    cursor: pointer
+}
+
+.columns-label{
+    display: block;
+    font-size: 20px;
+    margin: 10px 30px 10px 50px;
+}
+
+.select-box{
+    margin: 0 20px;
+    padding: 0 10px;
+    border-radius:5px
+}
+
+.ok-button{
+    padding: 15px 70px;
+    background-color: transparent;
+    margin: 20px 0;
+    border: none;
+    font-size: 16px;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: 550;
+    color: white;
+    border: 1px solid white;
+}
+
+.button-warrper{
+    display: flex;
+    justify-content: center;
+}
+
+.ok-button:hover{
+    background-color: #F49E4C;
+
 }
