--- a/src/components/layouts/home.css
+++ b/src/components/layouts/home.css
@@ -251,4 +251,9 @@
         font-size: 28px;
         display: block
     }
+
+    .modal-content{
+        width: 100%;
+        height: 50%;
+    }
 } 
